--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -10,6 +10,7 @@
     width: 100%;
     height: calc(100vh - 120px);
     padding-bottom: 40px;
+    overflow: hidden;
 }
 
 .app__header-image img {
@@ -61,3 +62,65 @@
     line-height: 1.7rem;
     font-family: var(--font-base);
 } 
+
+@media screen and (max-width: 1600px) {
+    .app__header-image {
+        width: 170%;
+        padding: 0 50px;
+    }
+
+    .header__desc-title h2 {
+        font-size: 120px;
+    }
+}
+
+@media screen and (max-width: 1150px) {
+    .header__desc-title h2 {
+        font-size: 90px;
+    }
+
+    .header__desc-subtitle {
+        width: 300px;
+    }
+}
+
+@media screen and (max-width: 850px) {
+    .app__header {
+        flex-direction: column;
+    }
+
+    .app__header-image {
+        position: absolute;
+        width: 100%;
+        padding: 0;
+        align-self: center;
+        height: 40vh;
+    }
+
+    .header__desc-title {
+        height: fit-content!important;
+    }
+
+    .app__header-desc {
+        margin-top: 45vh;
+        padding: 0 7%;
+    }
+
+    .header__desc-desc p {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .header__desc-title h2 {
+        font-size: 70px;
+    }
+
+    .header__desc-subtitle {
+        width: 129px;
+    }
+
+    .header__desc-subtitle {
+        margin-bottom: 50px;
+    }
+}
