--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -3,7 +3,7 @@
     height: 70px;
     width: 100%;
     justify-content: center;
-    padding: 3rem 16rem;
+    padding: 3rem 1rem;
     /* background-color: rgb(24, 24, 24); */
     background-color: black;
     align-items: center;
@@ -29,11 +29,67 @@
 
 .app__navbar-links ul li{
     list-style: none;
-    margin-left: 70px;
+    margin: 0 35px;
     cursor: crosshair;
 }
 
 .app__navbar-links ul li:hover {
     color: white;
     transform: scale(1.2)
+}
+
+.app__navbar-ham {
+    width: 32px;
+    height: 25px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-right: 2%;
+    cursor: pointer;
+    z-index: 1002;
+    
+}
+
+.app__navbar-ham span {
+    width: 100%;
+    height: 3px;
+    background-color: white;
+    transform-origin: left;
+    transition: all 0.5s ease;
+}
+
+.app__navbar-ham:hover span {
+    background-color: black;
+}
+
+
+.app__navbar-ham.active span:first-child {
+    transform: rotate(45deg);
+}
+
+.app__navbar-ham.active span:nth-child(2) {
+    opacity: 0;
+}
+
+.app__navbar-ham.active span:last-child {
+    transform: rotate(-45deg);
+}
+
+.app__navbar-ham {
+    display: none;
+}
+
+@media screen and (max-width: 850px) {
+
+    .app__navbar {
+        justify-content: flex-end;
+    }
+
+    .app__navbar-ham {
+        display: flex;
+    }
+
+    .app__navbar-links {
+        display: none;
+    }
 }
