--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -38,15 +38,61 @@
 
 #left_list {
     position: absolute;
+    right: 35%;
     
 }
 
 #right_list {
     position: absolute;
     padding-top: 200px;
-    right: 90px;
+    right: 7%;
 }
 
+@media screen and (max-width: 1550px) {
+    #left_list {
+        right: 40%;
+    }
+}
 
+@media screen and (max-width: 1024px) {
+    #left_list {
+        right: 35%;  
+    }
+
+    #right_list {
+        right: 0%;
+    }
+}
+
+@media screen and (max-width: 850px) {
+    #left_list {
+        left: 10%;
+    }
+    #right_list {
+        left: 50%;
+    }
+} 
+
+@media screen and (max-width: 700px) {
+
+    #left_list {
+        position: unset;
+    }
+
+    #right_list {
+        position: unset;
+    }
+
+    .app__services {
+        height: 600vh;
+    }
+
+    .services__list {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: unset;
+    }
+}
 
 
