--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -40,4 +40,52 @@
 
 .app__icon svg:hover {
     font-size: 35px;
+    color: black;
+    z-index: 1000;
+}
+
+.app__scroll:hover {
+    color: black;
+    z-index: 1000;
+}
+
+.app__navbar-smallscreens_overlay {
+    position: fixed;
+    display: flex;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: black;
+    transition: .5 ease;
+    flex-direction: column;
+    z-index: 5;
+
+    
+    justify-content: center;
+    align-items: center;
+}
+
+.app__navbar-smallscreens_overlay ul {
+    font-size: 60px;
+    font-family: var(--font-base);
+    color: white;
+    list-style: none;
+}
+
+.app__navbar-smallscreens_overlay ul li {
+    padding: 0.8rem 0;
+}
+
+
+@media screen and (max-width: 850px) {
+    .app__sidebar {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .app__navbar-smallscreens_overlay ul {
+        font-size: 45px;
+    }
 }
